--- a/hw_9/style.css
+++ b/hw_9/style.css
@@ -332,37 +332,55 @@ html,body {
 .interface {
     position: relative;
 }
-.interface_wrapper {
-    display: flex;
-    flex-direction: column;
-    width: 45%;
-    padding-top: 215px;
-    padding-bottom: 170px;
-    padding-right: 100px;
-}
-
-.interface_img {
-    position: absolute;
-    top: 0;
-    right: 0;
-  
-    background-image: url('./img/optimized/circle_bg.png');
+.container--bg {
     max-width: 1440px;
     width: 100%;
+    margin: 0 auto;
 
-    left: 50%;
-    transform: translate(-50%, 0);
-    min-height: 716px;
-
+    background-image: url('./img/optimized/circle_bg.png');
+    /* background-position: 100% 0; */
     background-size: auto 716px;
     background-repeat: no-repeat;
-    z-index: -10;
+    z-index:-20;
+}
+.interface_inner {
+    display: flex;
+    align-items: center;
+}
+.interface_content {
+    display: flex;
+    flex-direction: column;
+    width: 55%;
+    padding-top: 215px;
+    padding-bottom: 170px;
+} 
+.interface_contwrap {
+    display: flex;
+    justify-content: center;
+}
+.interface_img {
+    width: 100%;
+    min-height: 716px;
+    height: 100%;
+    z-index: 10;
    
+    margin-right: auto;
+    margin-left: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .interface_example {
+    margin-right: auto;
+    margin-left: 10%;
+    display: flex;
+    justify-content: flex-end;
+}
+.interface_ex_wrapper {
+    width: 85%;
+}
+.iphone_wrap {
     position: relative;
-    left: 58%;
-    margin-top: 5%;
 }
 .interface_circle {
     position: absolute;
@@ -387,7 +405,7 @@ html,body {
     height: 30px;
 
     top: 80%;
-    left: -1%;
+    left: -13%;
 
     background: #FFFFFF;
     box-shadow: 0px 3.13793px 15.6897px rgba(0, 0, 0, 0.25), 0px 2.51034px 6.27586px rgba(51, 51, 51, 0.1);
@@ -402,7 +420,7 @@ html,body {
 }
 .interface_circle.notification {
     top: 10%;
-    left: 2%;
+    left: 10%;
 }
 
 .notification_icon {
@@ -427,7 +445,7 @@ html,body {
 }
 .interface_circle.phone {
     top: 70%;
-    left: 18%;
+    left:92%;
 } 
 .interface_circle.cart {
     visibility: hidden;
@@ -451,7 +469,7 @@ html,body {
 }
 
 
-
+/* Features */
 .features {
     background: url('./img/optimized/features_bg.png');
     background-repeat: no-repeat;
